--- a/css/style.css
+++ b/css/style.css
@@ -164,9 +164,6 @@ footer {
     grid-row: 1;
     
 }
-.imagesToHolidays div {
-    justify-content: center;
-}
 .imagesToRecipes {
     display: grid;
     grid-template-rows: 1fr 1fr auto;
@@ -193,11 +190,40 @@ footer {
     grid-template-rows: 1fr auto;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     background-color: var(--Cream);
+    justify-items: center;
 }
+.imagesToHolidays > h2{
+    grid-column: 1/5;
+    grid-row: 1;
+    color: var(--Reddish);
+    text-align: center;
+}
+
+.imagesToHolidays div {
+    justify-content: center;
+    grid-row: 2;
+}
+.imagesToHolidays span {
+    grid-row: 3;
+}
+
 .round {
     background-color: var(--Whiteish);
     border-radius: 50%;
 }
 .imagesToRecipes span {
     font-size: 20px;
+}
+
+/*EASTER*/
+.imagesToEaster {
+    display: grid;
+    grid-template-rows: 1fr auto;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    background-color: var(--Cream);
+}
+.imagesToEaster img{
+    max-width: 70%;
+    background-color: var(--Whiteish);
+    border-radius: 50%;
 }
